# Secure-Two-party-K-means

./: CHANGELOG  CMakeLists.txt  Doxyfile  README.md  README.md.backup
data/: M2_A_ph.txt  M2_B_ph.txt  M_A.txt  M_A_ph.txt  M_B.txt  M_B_ph.txt  S_A.txt  S_A_ph.txt  S_A_ph_test.txt  S_B.txt  S_B_ph.txt
src/abycore/: CMakeLists.txt
src/abycore/ABY_utils/: ABYconstants.h
src/abycore/aby/: abyparty.cpp
src/abycore/circuit/: arithmeticcircuits.cpp  booleancircuits.cpp
src/abycore/sharing/: boolsharing.cpp
src/algorithms/: CMakeLists.txt  alg_or.cpp  algorithm_handler.cpp  algorithm_handler.h
src/config/: constant.h
src/tests/: CMakeLists.txt  alg_rvp.cpp  rvp_rec.cpp  rvp_snd.cpp  test_utils.cpp
src/utils/: CMakeLists.txt  WVector.h  data.cpp  data.h  easylogging++.cpp  easylogging++.h  encoder.cpp  encoder.h  handler.cpp  handler.h  utils.h
src/utils/_unused/: ylog.h
